--- a/tests/ragger/setup.cfg
+++ b/tests/ragger/setup.cfg
@@ -8,6 +8,9 @@ disable = C0114,  # missing-module-docstring
           C0103,  # invalid-name
           R0801,  # duplicate-code
           R0903,  # too-few-public-methods
+          R0904,  # too-many-public-methods
+          R0911,  # too-many-statements
+          R0912,  # too-many-branches
           R0913,  # too-many-arguments
           R0914,  # too-many-locals
           W0603,  # global-statement
